--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
   build:
     commands:
       - ng build
+      - aws s3 sync build/ s3://ci-cd-s3-codedeploy-bucket
 
 artifacts:
   files:
