--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - ng build
   post_build:
     commands:
-      - echo build process finished, we should uplload to S3 now
+      - echo build process finished, we should upload to S3 now
       - cd dist/$APP_NAME
       - ls -la
-      - aws s3 sync . s3://my-awsome-bucket-of-files --delete
+      - aws s3 sync . s3://ci-cd-s3-codedeploy-bucket --delete
