--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,6 @@ phases:
   post_build:
     commands:
       - echo build process finished, we should upload to S3 now
-      - cd dist/$APP_NAME
+      - cd dist/angular-cicd-pipeline-demo
       - ls -la
       - aws s3 sync . s3://ci-cd-s3-codedeploy-bucket --delete
