--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
   variables:
-    APP_NAME: "angular-cicd-pipeline-demo"
+    APP_NAME: "angular-poc"
 phases:
   install:
     runtime-versions:
@@ -18,4 +18,4 @@ phases:
       - echo build process finished, we should upload to S3 now
       - cd dist/
       - ls -la
-      - aws s3 sync . s3://my-angular-bucket-of-files --delete
+      - aws s3 sync . s3://angular-cicd-poc --delete
