--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,5 @@ phases:
   post_build:
     commands:
       - echo build process finished, we should upload to S3 now
-      - cd dist/
-      - ls -la
-      - aws s3 sync build/ s3://angular-cicd-poc
+      - ls -la dist/
+      - aws s3 sync dist/ s3://angular-cicd-poc
